--- a/templates/header.html
+++ b/templates/header.html
@@ -31,7 +31,7 @@
         <ul class="nav nav-pills">
             <li class="nav-item"><a href="{{ url_for('home') }}" class="nav-link active" aria-current="page">Home</a></li>
             <li class="nav-item"><a href="{{ url_for('portfolio') }}" class="nav-link text-dark">Portfolio</a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-dark">Contact</a></li>
+            <li class="nav-item"><a href="{{ url_for('contact') }}" class="nav-link text-dark">Contact</a></li>
         </ul>
     </header>
 </div>
