--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
             </p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
                 <a type="button" class="btn btn-lg px-4 me-sm-3 btn-indigo" href="{{ url_for('portfolio') }}">Check Portfolio</a>
-                <a type="button" class="btn btn-lg px-4 btn-outline-indigo" href="#">Contact</a>
+                <a type="button" class="btn btn-lg px-4 btn-outline-indigo" href="{{ url_for('contact') }}">Contact</a>
             </div>
         </div>
             <div class="container px-5">
