Github link in footer

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -10,8 +10,8 @@
         </a> <span class="mb-3 mb-md-0 text-body-secondary">© 2025 Company, Inc</span></div>
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
             <li class="ms-3">
-                <a class="text-body-secondary" href="#" aria-label="Facebook">
-                    <i class="bi bi-facebook me-2 fs-4 my-icon"></i>
+                <a class="text-body-secondary" href="https://github.com/PanKatofel" aria-label="Github" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-github me-2 fs-4 my-icon"></i>
                 </a>
             </li>
         </ul>
