--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -18,46 +18,23 @@
         </div>
     </section>
 
-    <div class="album py-4">
+    <div class="album py-1">
         <div class="container">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <img src="{{ url_for('static', filename='assets/img/bootstrap.jpg') }}" class="card-img-top" alt="Bootstrap background" height="225" style="object-fit: cover;">
-                        <div class="card-body d-flex flex-column"><p class="card-text">I haven't worked much with Bootstrap. Nevertheless, I have the basic skills to create the portfolio website you are currently visiting.</p>
+                {% for project in data %}
+                    <div class="col">
+                    <div class="card shadow-sm p-1">
+                        <img src="{{ url_for('static', filename=data[project]['icon_img']) }}" class="card-img-top" alt="Bootstrap background" height="200" style="object-fit: cover;">
+                        <div class="card-body d-flex flex-column"><p class="card-text">{{ data[project]['album_desc'] }}</p>
                             <div class="d-flex justify-content-between align-items-center mt-auto">
                                 <div class="btn-group">
-                                    <a href="{{ url_for('review', project_name='bs_portfolio') }}" type="button" class="btn btn-sm btn-indigo">View</a>
+                                    <a href="{{ url_for('review', project_name=project) }}" type="button" class="btn btn-sm btn-indigo">View</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <img src="{{ url_for('static', filename='assets/img/unity.jpg') }}" class="card-img-top" alt="Unity background" height="225" style="object-fit: cover;">
-                        <div class="card-body d-flex flex-column">
-                            <p class="card-text">One of my favorite projects created in Unity where I recreated a game from my childhood in it.</p>
-                            <div class="d-flex justify-content-between align-items-center mt-auto">
-                                <div class="btn-group">
-                                    <a href="{{ url_for('review', project_name='fruit_ninja') }}" type="button" class="btn btn-sm btn-indigo">View</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <img src="{{ url_for('static', filename='assets/img/python.jpg') }}" class="card-img-top" alt="Bootstrap background" height="225" style="object-fit: cover;">
-                        <div class="card-body d-flex flex-column"><p class="card-text">I have been working with Python for quite some time, and this is one of my simpler projects. Also, I will roughly describe my skills in this language.</p>
-                            <div class="d-flex justify-content-between align-items-center mt-auto">
-                                <div class="btn-group">
-                                    <a href="{{ url_for('review', project_name='morse_code') }}" type="button" class="btn btn-sm btn-indigo">View</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
         </div>
     </div>
