Layout update, Watermark App

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
 <div class="main-content">
     <div class="px-4 pt-5 my-5 text-center">
         <h1 class="display-4 fw-bold text-body-emphasis">PanKatofel Dev</h1>
-        <div class="col-lg-6 mx-auto">
+        <div class="col-lg-8 col-xl-6 mx-auto">
             <p class="lead mb-4">Junior developer focused on Python and Flask, with experience in building responsive web interfaces using Bootstrap. I've also explored C# and Unity, gaining a solid foundation in game development. I'm passionate about clean code, learning new technologies, and turning ideas into working applications.
             </p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
